k8s/movie-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: moviebox
spec:
  selector:
    app: movie-service
  ports:
  - port: 80
    targetPort: 5002
  type: ClusterIP
