k8s/payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: moviebox
spec:
  selector:
    app: payment-service
  ports:
  - port: 80
    targetPort: 5005
  type: ClusterIP
