k8s/theater-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: theater-service
  namespace: moviebox
spec:
  selector:
    app: theater-service
  ports:
  - port: 80
    targetPort: 5003
  type: ClusterIP
