k8s/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: moviebox
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 5001
  type: ClusterIP
